--- a/app/views/dashboard/order_items/edit.html.haml
+++ b/app/views/dashboard/order_items/edit.html.haml
@@ -5,10 +5,8 @@
     %h3=  t('dashboard.orders.track_time_and_expenses')
     = link_to t('dashboard.order_items.back_to_projects'), dashboard_company_transactable_type_transactables_path(@order.transactable.transactable_type, status: 'in progress')
     .orders-a
-      = dashboard_simple_form_for @order_item, url: dashboard_order_order_items_path(@order) do |f|
+      = dashboard_simple_form_for @order_item, url: dashboard_order_order_item_path(@order, @order_item) do |f|
         = render 'form', f: f
         .panel.form-actions
           .panel-body
             = f.submit t('dashboard.host_reservations.complete_reservation.submit'), class: 'btn-lg btn-primary'
-      - if @order.recurring_booking_periods.any?(&:persisted?)
-        = render partial: 'show', order: @order
