--- a/app/views/dashboard/order_items/show.html.haml
+++ b/app/views/dashboard/order_items/show.html.haml
@@ -6,9 +6,5 @@
     = link_to t('dashboard.order_items.back_to_projects'), dashboard_company_transactable_type_transactables_path(@order.transactable.transactable_type, status: 'in progress')
     .orders-a
       = dashboard_simple_form_for @order_item, url: dashboard_order_order_items_path(@order) do |f|
-        = render 'form', f: f
-        .panel.form-actions
-          .panel-body
-            = f.submit t('dashboard.host_reservations.complete_reservation.submit'), class: 'btn-lg btn-primary'
-      - if @order.recurring_booking_periods.any?(&:persisted?)
-        = render partial: 'show', order: @order
+        = render 'form', f: f, readonly: true
+
