--- a/lib/tasks/uot/templates/dashboard_company_transactables_client_actions.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_client_actions.liquid
@@ -8,8 +8,8 @@
     <li><a href='{{ transactable.edit_path }}' class="btn btn-primary">Edit Project</a></li>
   {% endif %}
 
-  {% if current_status == "in progress" or current_status == "archived" %}
-    <li><a href="#" class="btn btn-default">View Time &amp; Expenses</a></li>
+  {% if transactable.pending? == false and accepted_order != blank %}
+    <li><a href="{{ 'dashboard_order_order_items_path' | generate_url: order_id: accepted_order.id, transactable_id: transactable.id }}" class="btn btn-default">View Time &amp; Expenses</a></li>
   {% endif %}
 
   {% if current_status == 'in progress' %}
