--- a/lib/tasks/uot/templates/dashboard_company_users_collaborations_for_current_user.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_users_collaborations_for_current_user.liquid
@@ -12,7 +12,10 @@
       <ul>
         {% for collaborator in collaborators %}
         <li>
-          {{ collaborator.transactable.name }} <button type="button" class="button-b action-remove" data-transactable-collaborator-id="{{ collaborator.id }}" data-transactable-id="{{ collaborator.transactable.id }}">Remove</button>
+          {{ collaborator.transactable.name }}
+          {% if collaborator.transactable.pending? %}
+            <button type="button" class="button-b action-remove" data-transactable-collaborator-id="{{ collaborator.id }}" data-transactable-id="{{ collaborator.transactable.id }}">Remove</button>
+          {% endif %}
         </li>
         {% endfor %}
       </ul>
