--- a/lib/tasks/uot/templates/dashboard_layout_left_navigation.liquid
+++ b/lib/tasks/uot/templates/dashboard_layout_left_navigation.liquid
@@ -74,9 +74,11 @@
         {% assign projects_visible = 'dashboard/projects' | is_visible %}
         {% assign projects_show = platform_context.projectable? and projects_visible %}
         {% assign transactables_path = 'dashboard_company_transactable_type_transactables_path' | generate_url: platform_context.transactable_types.first.id %}
-        {% assign transactables_selected = current_path | matches: 'dashboard/company/(service_types|transactable_types)' %}
+        {% assign transactables_selected = current_path | matches: 'dashboard/company/transactable_types' %}
         {% assign transactables_visible = 'dashboard/transactables' | is_visible %}
         {% assign transactables_show = current_user.registration_completed? and transactables_visible %}
+        {% assign order_items_path = 'dashboard_order_items_path' | generate_url %}
+        {% assign order_items_selected = current_path | matches: 'dashboard/(orders/[0-9]*/)?order_items' %}
 
         {% if projects_show %}
           <li id="dashboard-nav_projects_header" class="{% if projects_selected %}selected{% endif %}">
@@ -90,41 +92,21 @@
         {% endif %}
 
         {% if transactables_show %}
-          <li id="dashboard-nav-transactables" class="{% if transactables_selected %}selected{% endif %}">
-            <a href="{{ transactables_path }}">{{ 'dashboard.nav.transactables' | t }}</a>
-          </li>
-        {% endif %}
-
-        {% if platform_context.bookable? %}
-          {% assign orders_visible = 'dashboard/orders' | is_visible %}
-          {% assign orders_enabled = !platform_context.split_registration? or current_user.has_buyer_profile? %}
-          {% assign orders_show = orders_visible or orders_enabled %}
-          {% assign orders_path = 'dashboard_orders_path' | generate_url %}
-          {% assign orders_selected = current_path | matches: orders_path %}
-          {% assign orders_received_visible = 'dashboard/orders_received' | is_visible %}
-          {% assign orders_received_show = current_user.registration_completed? and orders_received_visible %}
-          {% assign orders_received_path = 'dashboard_company_orders_received_index_path' | generate_url %}
-          {% assign orders_received_selected = current_path | matches: orders_received_path %}
-
-          {% if orders_show or orders_received_show %}
-            <li id="dashboard-nav-orders_header" class="{% if orders_selected or orders_received_selected %}selected{% endif %}">
-              <span>{{ 'dashboard.nav.orders_header' | t }} {{ current_user.reservations_count }}</span>
+          <li id="dashboard-nav-transactables" class="{% if transactables_selected or order_items_selected %}selected{% endif %}">
+            <span>{{ 'dashboard.nav.transactables' | t }}</span>
 
               <ul>
-                {% if orders_show %}
-                  <li id="dashboard-nav-orders" class="{% if orders_selected %}selected{% endif %}">
-                    <a href="{{ orders_path }}">{{ 'dashboard.nav.orders' | t }}</a>
+                {% if transactables_show %}
+                  <li id="dashboard-nav-transactables" class="{% if transactables_selected %}selected{% endif %}">
+                    <a href="{{ transactables_path }}">{{ 'dashboard.nav.transactables' | t }}</a>
                   </li>
                 {% endif %}
 
-                {% if orders_received_show %}
-                  <li id="dashboard-nav-orders" class="{% if orders_received_selected %}selected{% endif %}">
-                    <a href="{{ orders_received_path }}">{{ 'dashboard.nav.orders_received' | t }}</a>
+                  <li id="dashboard-nav-order_items" class="{% if order_items_selected %}selected{% endif %}">
+                    <a href="{{ order_items_path }}">{{ 'dashboard.nav.order_items' | t }}</a>
                   </li>
-                {% endif %}
               </ul>
-            </li>
-          {% endif %}
+          </li>
         {% endif %}
       {% endif %}
 
