--- a/app/views/dashboard/company/transactables/form_fields/action_types/_offer_action.html.haml
+++ b/app/views/dashboard/company/transactables/form_fields/action_types/_offer_action.html.haml
@@ -3,3 +3,6 @@
   = pricing.input :_destroy, as: :hidden
   = pricing.hidden_field :enabled, value: '1'
   = pricing.hidden_field :is_free_booking, value: '1'
+
+  - if pricing.object.transactable_type_pricing.try(:allow_free_booking?) && f.object.try(:allow_free_booking?)
+    = pricing.input :is_free_booking, as: :switch, inline_label: true, label: false, input_html: { 'data-free-booking' => true, data: { :"label-off" => t('pricing.free'), :"label-on" => t('pricing.free') } }
