--- a/app/views/instance_admin/manage/transactable_types/_merchant_fee.html.haml
+++ b/app/views/instance_admin/manage/transactable_types/_merchant_fee.html.haml
@@ -5,7 +5,7 @@
     .input-container.col-xs-2
       = f.input :amount, input_html: { class: 'form-control' }
     .input-container.col-xs-2
-      = f.input :currency, collection: Currency.all.map(&:full_name)
+      = f.input :currency, collection: Currency.all.map { |c| [c.full_name, c.iso_code] }
     .input-container.col-xs-3
       = f.input :charge_event, collection: ChargeType::CHARGE_EVENT.invert, include_blank: false
     .input-container.col-xs-2
