--- a/app/community_views/layouts/community.html.haml
+++ b/app/community_views/layouts/community.html.haml
@@ -1,7 +1,29 @@
 !!!
 %html{:lang => "en"}
 
-  = render 'shared/head'
+  %head
+    = render 'layouts/content_holder_injector'
+    = inject_content_holder('HEAD')
+    = yield(:meta)
+    %meta{:charset => "utf-8"}/
+    %title= title_tag
+    %meta{:content => meta_description_content, :name => "description"}/
+
+    %meta{property: "og:title", content: meta_attr(title_tag)}/
+    %meta{property: "og:site_name", content: meta_attr(current_instance.name)}/
+    %meta{property: "og:url", content: request.original_url}/
+    %meta{property: "og:description", content: meta_attr(meta_description_content)}/
+    %meta{property: "og:image", content: meta_og_image_content}/
+
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
+    %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}/
+    = stylesheet_link_tag    'community', media: 'all'
+
+    %link{:href => "#{platform_context.favicon_image.url}", :rel => "shortcut icon"}/
+
+    = csrf_meta_tags
+    = yield(:head_bottom)
+
 
   %body{class: body_classes}
     = yield(:body_top)
@@ -24,6 +46,14 @@
           = yield
 
         = yield :tutorial
+
+    = render "shared/javascripts/javascript_assets"
+    = render 'shared/javascripts/raygun/libs'
+    = render 'shared/javascripts/marketplace_logger'
+    = render 'shared/javascripts/ckeditor_basepath'
+
+    = javascript_include_tag 'vendor/jquery.min'
+    = javascript_include_tag 'vendor/modernizr'
 
     = render 'shared/footer'
 
