--- a/app/frontend/stylesheets/new_ui/modules/_messages.scss
+++ b/app/frontend/stylesheets/new_ui/modules/_messages.scss
@@ -48,6 +48,10 @@
             color: $messages-date-color;
         }
 
+        .attachment a::before {
+            content: $fa-var-paperclip;
+        }
+
         .actions {
             position: absolute;
             right: 10px;
@@ -121,6 +125,14 @@
         }
     }
 
+    a:before, li > span:before {
+        @include fa-icon();
+        font-size: 18px;
+        width: 20px;
+        text-align: center;
+        margin-right: 15px;
+    }
+
     .message {
         position: relative;
         @include clear;
@@ -156,6 +168,10 @@
         .date {
             margin-left: 20px;
             color: $messages-date-color;
+        }
+
+        .attachment a::before {
+            content: $fa-var-paperclip;
         }
 
         .author {
