--- a/app/views/dashboard/user_messages/_user_message_for_show.html.haml
+++ b/app/views/dashboard/user_messages/_user_message_for_show.html.haml
@@ -21,3 +21,8 @@
 
   .body
     = user_message.body
+
+  %footer
+    %span.attachment
+      - user_message.attachments.each do |attachment|
+        = link_to attachment.file.file_name, attachment.file.url, download: attachment.file.file_name
