NM-5372 fix empty client tab

--- a/app/views/dashboard/shared/_profile_nav.html.haml
+++ b/app/views/dashboard/shared/_profile_nav.html.haml
@@ -2,7 +2,7 @@
   %ul.tabs.pull-left
     %li{class: "#{'active' if active == :default}"}
       = link_to t('dashboard.user_profile.sections.default'), edit_registration_path(current_user)
-    - if current_user.seller_profile.present? && current_instance.seller_profile_enabled?
+    - if current_user.seller_profile.present? && current_instance.seller_profile_enabled? && current_user.seller_profile.has_fields?(FormComponent::SELLER_PROFILE_TYPES)
       %li{class: "#{'active' if active == :seller}"}
         = link_to t('dashboard.user_profile.sections.seller'), edit_dashboard_seller_path
     - if current_user.buyer_profile.present? && current_instance.buyer_profile_enabled?
