NM-5289 User favorites now have smaller name to better fit longer strings

--- a/app/frontend/stylesheets/new_ui/modules/_wish-list.scss
+++ b/app/frontend/stylesheets/new_ui/modules/_wish-list.scss
@@ -139,6 +139,10 @@ $wish-list-item-padding: 20px;
         bottom: $wish-list-item-padding;
     }
 
+    .name {
+        font-size: 1.4em;
+    }
+
     @media (min-width: 450px) {
         width: 49%;
 
