--- a/lib/tasks/uot/templates/registrations_show.liquid
+++ b/lib/tasks/uot/templates/registrations_show.liquid
@@ -7,109 +7,68 @@
             <div class="wrapper">
                 <header class="header">
                     <figure>
-                        <img src="https://d2rw3as29v290b.cloudfront.net/instances/195/uploads/ckeditor/picture/data/2740/portait-a.jpg" alt="Dr. Tomas J. Mowbray">
+                        <img src="{{ user.avatar_url_big }}" alt="{{ user.name }}">
                     </figure>
-                    <h1><a href="./">Dr. Thomas J. Mowbray</a></h1>
+                    <h1>{{ user.name }}</h1>
 
                     <div class="properties">
                         <p class="price">
-                            <strong>$80 USD / hr</strong>
+                            <strong>${{ user.buyer_properties['hourly_rate']}} USD / hr</strong>
                         </p>
                         <dl class="property">
                             <dt>Discounts:</dt>
-                            <dd>Available</dd>
+                            <dd>{{ user.buyer_properties['discounts_available'] }}</dd>
                         </dl>
                     </div>
 
                     <div class="contact">
-                        <button class="button-b action-message">Send Message</button>
-                        <button class="button-b action-call">Call Me</button>
+                        <a class="button-b action-message" href="{{user.user_message_path}}" rel="modal">Send Message</a>
+                        {{ user.click_to_call_button }}
                     </div>
                 </header>
 
                 <div class="content">
-                    <h3>Expertise:</h3>
+                    <h3>Expertise</h3>
                     <ul>
-                        <li>Software Design, Development &amp; Integration</li>
-                        <li>Documentation and Technical Writing</li>
-                        <li>Marketing, Branding, Communications, Social Media &amp; Digital Engagement</li>
+                        {% for exp in user.buyer_categories["Area Of Expertise"]['children'] %}
+                            <li>{{ exp }}</li>
+                        {% endfor %}
                     </ul>
 
                     <h3>Industry</h3>
                     <ul>
-                        <li>Management and Operations</li>
-                        <li>State and Local Government</li>
-                        <li>Law Enforcement and Homeland Security</li>
+                        {% for exp in user.buyer_categories["Industry"]['children'] %}
+                            <li>{{ exp }}</li>
+                        {% endfor %}
                     </ul>
 
-                    <h3>Will work in these Cities:</h3>
-                    <p>Online, Saint Louis, Chicago, Kansas City</p>
+                    <h3>Will work in these Cities</h3>
+                    <p>{{ user.buyer_properties['cities'] }}</p>
 
                     <h3>Languages</h3>
-                    <p>English</p>
+                    <ul>
+                    {% for exp in user.buyer_categories["Languages"]['children'] %}
+                        <li>{{ exp }}</li>
+                    {% endfor %}
+                    </ul>
 
                     <hr>
 
-                    <p>Dr. Mowbray is a Chief Scientist at Blueprint Technologies, Incorporated in McLean, Virginia, USA.   Dr. Mowbray’s background includes over 20 years’ experience computer science research including topics such as: programming languages, mobile robotics, parallel processing, image understanding, visual simulation, and software architectures. </p>
-
-                    <h3>Education, Certifications and Training</h3>
-                    <p>Dr. Mowbray holds the B.S. degree in Electrical Engineering from the University of Illinois, Champaign-Urbana, the M.S. degree in Computer Engineering from Stanford University, and the Ph.D. in Computer Science from the University of Southern California.</p>
-
-                    <h3>Awards and Honors</h3>
-                    <p>In 1996, DISCUS received an award from COMPUTERWORLD as an outstanding object-oriented application system.  The DISCUS case study is documented in the book "The Essential CORBA" (Wiley 1995).</p>
-
-                    <h3>Professional Service</h3>
-                    <p>Currently, Dr. Mowbray is a full time Software Architect consulting to major fortune 500 companies in the United States and organizations worldwide. He has applied architecture design patterns and Open Distributed Processing in multiple domains, including: data communications, business information technology, Internet-based information retrieval, finance, and accounting. Currently, Dr. Mowbray has been honored with as the Chief Scientific Technical Officer of the European Esprit COMPASS project, the first IT standards project for the accounting domain. In addition, Dr. Mowbray is the Chief Scientist of the Component Management Group™, a non-profit software professional organization, founded in India.</p>
-
-                    <p>In 1991, Dr. Mowbray became Principal Investigator of the Data Interchange and Synergistic Collateral Usage Study (DISCUS), the US government’s first CORBA project. DISCUS evolved into 4 major testbed iterations that proved the feasibility of system interoperability across a broad range of commercial and legacy software systems. </p>
-
-                    <p>In 1995, Dr. Mowbray was project lead for the Information Access Services Specification (IASS).  Within two years, this initiative solved the key interoperability challenge for the geospatial and imagery user community.  IASS is supported by a formal test suite from the Joint Interoperability Test Center (JITC), and is utilized in several major National Imagery and Mapping Agency procurements.  A case study of the IASS activity is documented in the book "Inside CORBA" (Addison-Wesley 1997).</p>
-
-                    <p>From 1993 until 1997, Dr. Mowbray was a Principal Representative to the Object Management Group (OMG), an industry standards group.  At the Object Management Group, Dr. Mowbray was recently honored as an OMG Fellow and former chair of the CORBAfacilities Task Force.  In CORBAfacilities, he led the effort to architect the expansion of the OMG into horizontal facilities and vertical domains.  Dr. Mowbray was also Chairman of the OMG Command, Control, Computer, Communications, and Intelligence Working Group (OMG C4I). This group is defining object-oriented standards for C4I systems interoperability.  Dr. Mowbray also chaired the Interface Definition Language (IDL) and Unified Modeling Language (UML) Patterns and Metrics Working Group.  This group has defined the specification style guide being used by U.S. government for specifications compliant with the International Standards Organization’s Open Distributed Processing IDL (ISO ODP IDL).</p>
-
-                    <h3>Teaching, Writing and Publishing</h3>
-                    <p>Tom Mowbray, Ph.D. is author of the books: "The Essential CORBA" (Wiley 1995), "CORBA Design Patterns" (Wiley 1997), "Inside CORBA" (Addison-Wesley 1997), and the "ANTIPATTERNS" (Wiley 1998). </p>
-
-                    <h3>Links to whitepapers, articles</h3>
-                    <p>Dr. Mowbray has published more than three dozen articles and papers.  He is a contributing editor and “Architectures Columnist” for OBJECT Magazine (now Component Strategies Magazine).  Dr. Mowbray is also a contributor to several other journals and publications, including: CrossTalk, Distributed Computing Magazine, Object Spectrum, Nikkei COMPUTER, Object News, CORBA Developer, and Communications of the Association for Computing Machinery (CACM).</p>
-
-                    <h3>Prior Employers or Clients</h3>
-                    <p>National Imagery and Mapping Agency, Joint Interoperability Test Center (JITC), Blueprint Technologies,</p>
-
-                    <h3>Special Projects and Accomplishments</h3>
-                    <p>Dr. Mowbray does extensive speaking and teaching in public conferences and forums.  His public tutorials and briefings have been presented at: INTEROP, OOPSLA, Object World, FedOOTS, Object Expo, CORBA Academy, IBM International Conference on Object Technology, Toward an Electronic Patient Record (TEPR), IEEE COMPSAC, and Patterns98.  Dr. Mowbray is  an advisor and tutorial presenter to consortium groups and standards bodies, including the Object Management Group, The National Industrial Information Infrastructure Project (NIIIP) Consortium, and the Open Geographic Information Systems Consortium (OGC).</p>
-
-                    <h3>Community and Giving Back Interests</h3>
-                    <p>I like to volunteer at the Virginia Technology Incubator and work with young entrepreneurs on their inventions.</p>
-
-                    <h3>Brief Personal Details (Family and Hobbies)</h3>
-                    <p>Love to backpack and hike.</p>
+                    <p>{{ user.buyer_properties['bio'] }}</p>
 
                     <hr>
 
                     <section class="recommendations-a">
                         <h3>Recommendations</h3>
                         <div class="items">
-                            <div class="item">
-                                <blockquote>
-                                    <p>&ldquo;Velit ne camur aliquip mos wisi caecus et illum. Tation pneum accumsan praemitto ullamcorper enim incassum quia. Rusticus accumsan nostrud rusticus magna tincidunt. Abdo augue in valde gilvus quae consequat ne. Valde veniam melior wisi pecus importunus iriure.&rdquo;</p>
-                                </blockquote>
-                                <p class="author">Author</p>
-                            </div>
-
-                            <div class="item">
-                                <blockquote>
-                                    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ipsa corporis nulla optio sequi quis non eligendi aut illo, nam officiis sed praesentium, labore ullam, perferendis at, consequatur magnam ratione.&rdquo;</p>
-                                </blockquote>
-                                <p class="author">Second author</p>
-                            </div>
-
-                            <div class="item">
-                                <blockquote>
-                                    <p>&ldquo;Perferendis at, consequatur magnam ratione.&rdquo;</p>
-                                </blockquote>
-                                <p class="author">Third author</p>
-                            </div>
+                            {% for recommendation in user.buyer_profile.customizations %}
+                                <div class="item">
+                                    <blockquote>
+                                        <p>&ldquo;{{ recommendation.properties['recommendation'] }}&rdquo;</p>
+                                    </blockquote>
+                                    <p class="author">{{ recommendation.properties['author'] }}</p>
+                                </div>
+                            {% endfor %}
                         </div>
                     </section>
                 </div>
@@ -120,34 +79,32 @@
                     {% if current_user != blank and current_user.has_seller_profile? %}
                         <li><a href="#project-invite-{{ user.id }}" class="button-a" data-project-invite-trigger>Invite to project</a></li>
                     {% endif %}
-                    <li><a href="./" class="button-b action-favorite">Add as Favorite</a></li>
-                    <li><a href="./" class="button-b action-blog">View Blog</a></li>
-                    <li><a href="./" class="button-b action-linkedin">LinkedIn Bio</a></li>
+                    <li>{% include 'shared/components/wish_list_button_injection.html', object: user %}</li>
+                    {% if user.has_active_blog? %}
+                        <li><a href="{{ user.user_blog_posts_list_path }}" class="button-b action-blog">View Blog</a></li>
+                    {% endif %}
+                    {% if user.buyer_properties['linkedin_url'] != blank %}
+                        <li><a href="{{ user.buyer_properties['linkedin_url'] }}" class="button-b action-linkedin" target="_blank">LinkedIn Bio</a></li>
+                    {% endif %}
                 </ul>
 
                 <hr>
 
                 <dl class="property">
                     <dt>Discounts:</dt>
-                    <dd>Available</dd>
+                    <dd>{{ user.buyer_properties['discounts_available'] }}</dd>
                 </dl>
 
-                <p>Ne humo tincidunt dolor immitto et. Ventosus natu tum aliquip conventio eros voco consectetuer occuro. Enim humo consequat vero refero augue vero duis ea damnum.</p>
+                <p>{{ user.buyer_properties['discounts_description'] }}</p>
 
                 <hr>
 
                 <div class="tags-a">
                     <h4>Tags</h4>
                     <ul>
-                        <li><a href="./">Electrical Engineering</a></li>
-                        <li><a href="./">Parallel Processing</a></li>
-                        <li><a href="./">Mobile Robotics</a></li>
-                        <li><a href="./">Electrical Engineering</a></li>
-                        <li><a href="./">Parallel Processing</a></li>
-                        <li><a href="./">Mobile Robotics</a></li>
-                        <li><a href="./">Electrical Engineering</a></li>
-                        <li><a href="./">Parallel Processing</a></li>
-                        <li><a href="./">Mobile Robotics</a></li>
+                        {% for tag in user.tags %}
+                            <li><a href="/search?query_fields=tags&amp;query={{ tag.name }}">{{ tag.name }}</a></li>
+                        {% endfor %}
                     </ul>
                 </div>
 
@@ -155,7 +112,7 @@
 
                 <ul class="actions-a">
                     <li>
-                        <button class="button-b action-flag" type="button">Flag as inappropriate</button>
+                        <a class="button-b action-flag" href="#" data-href="{{ user.inappropriate_report_path }}" data-modal="1">{{ 'inappropriate_reports.flag_as_inappropriate' | translate }}</a>
                     </li>
                 </p>
             </aside>
