--- a/lib/tasks/uot/templates/listings_show.liquid
+++ b/lib/tasks/uot/templates/listings_show.liquid
@@ -2,7 +2,7 @@
 <main id="main">
     <div class="wrapper-a">
         <div class="back-to-search-results back-to-listings">
-            <a href="search.html">Back to My Projects</a>
+            <a href="{{ 'dashboard_company_transactable_type_transactables_path' | generate_url: listing.transactable_type.slug }}">Back to My Projects</a>
         </div>
 
         <article class="listing-a">
